--- a/FreelancerRecuiter/WebContent/WEB-INF/web.xml
+++ b/FreelancerRecuiter/WebContent/WEB-INF/web.xml
@@ -7,7 +7,7 @@
     <welcome-file>index.jsp</welcome-file>
     <welcome-file>default.html</welcome-file>
     <welcome-file>default.htm</welcome-file>
-    <welcome-file>Input.jsp</welcome-file>
+    <welcome-file>home.jsp</welcome-file>
   </welcome-file-list>
   <servlet>
  <description></description>
